Add clock time to procsum.

--- a/ipynb/mondump.ipynb
+++ b/ipynb/mondump.ipynb
@@ -25,8 +25,8 @@
      "text": [
       "Python version is 3.9.7 (default, Sep 16 2021, 13:09:58) \n",
       "[GCC 7.5.0]\n",
-      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.14.dev1\n",
-      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.14.dev1\n"
+      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.15.dev1\n",
+      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.15.dev1\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "e145d796-d1a6-47ee-aee9-a839192abae1",
    "metadata": {},
    "outputs": [
@@ -278,6 +278,37 @@
       "   float64   psutil_process_disk_write\n",
       "    object   psutil_process_status\n",
       "*******************************************************\n",
+      "      try_id  task_id                                run_id  \\\n",
+      "2530       0      555  ff950ca2-14b5-4ce2-8ed0-5f767d15333b   \n",
+      "2598       0      555  ff950ca2-14b5-4ce2-8ed0-5f767d15333b   \n",
+      "\n",
+      "                       timestamp  resource_monitoring_interval  \\\n",
+      "2530  2022-02-17 14:54:27.700697                          60.0   \n",
+      "2598  2022-02-17 14:55:27.956303                          60.0   \n",
+      "\n",
+      "      psutil_process_pid  psutil_process_cpu_percent  \\\n",
+      "2530               60940                         0.0   \n",
+      "2598               60940                         0.0   \n",
+      "\n",
+      "      psutil_process_memory_percent  psutil_process_children_count  \\\n",
+      "2530                       0.308485                            3.0   \n",
+      "2598                       2.180997                            3.0   \n",
+      "\n",
+      "      psutil_process_time_user  psutil_process_time_system  \\\n",
+      "2530                      5.09                        1.93   \n",
+      "2598                     41.93                        6.46   \n",
+      "\n",
+      "      psutil_process_memory_virtual  psutil_process_memory_resident  \\\n",
+      "2530                   1.084617e+09                    4.168622e+08   \n",
+      "2598                   3.888087e+09                    2.945667e+09   \n",
+      "\n",
+      "      psutil_process_disk_read  psutil_process_disk_write  \\\n",
+      "2530                       0.0                        0.0   \n",
+      "2598                       0.0                        0.0   \n",
+      "\n",
+      "     psutil_process_status  \n",
+      "2530            disk-sleep  \n",
+      "2598              sleeping  \n",
       "----------------------------------------------------------------------------\n",
       "DB /global/homes/d/dladams/desc/test9/runinfo/monitoring.db has 7 tables\n",
       "*******************************************************\n",
@@ -376,6 +407,33 @@
       "   float64   psutil_process_disk_write\n",
       "    object   psutil_process_status\n",
       "*******************************************************\n",
+      "      try_id  task_id                                run_id  \\\n",
+      "3689       0      555  29420827-3781-4db0-8301-cdb1c51b864d   \n",
+      "3764       0      555  29420827-3781-4db0-8301-cdb1c51b864d   \n",
+      "\n",
+      "                       timestamp  resource_monitoring_interval  \\\n",
+      "3689  2022-03-03 15:25:20.976836                          60.0   \n",
+      "3764  2022-03-03 15:26:20.909388                          60.0   \n",
+      "\n",
+      "      psutil_process_pid  psutil_process_memory_percent  \\\n",
+      "3689               18046                       0.334827   \n",
+      "3764               18046                       0.332931   \n",
+      "\n",
+      "      psutil_process_children_count  psutil_process_time_user  \\\n",
+      "3689                            3.0                      4.67   \n",
+      "3764                            1.0                     41.24   \n",
+      "\n",
+      "      psutil_process_time_system  psutil_process_memory_virtual  \\\n",
+      "3689                        1.67                   1.410277e+09   \n",
+      "3764                        5.98                   1.383834e+09   \n",
+      "\n",
+      "      psutil_process_memory_resident  psutil_process_disk_read  \\\n",
+      "3689                     452218880.0                45596093.0   \n",
+      "3764                     449658880.0               306796278.0   \n",
+      "\n",
+      "      psutil_process_disk_write psutil_process_status  \n",
+      "3689                    25041.0            disk-sleep  \n",
+      "3764                125342265.0               running  \n",
       "----------------------------------------------------------------------------\n"
      ]
     }
@@ -386,10 +444,19 @@
     "    if os.path.exists(prcfil):\n",
     "        dbr = desc.wfmon.MonDbReader(prcfil, fix=False)\n",
     "        dbr.tables(lev)\n",
+    "        print(dbr.table('resource').query('task_id==555'))\n",
     "    else:\n",
     "        print(f\"File not found: {sysfil}\")\n",
     "    print(line)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a1f5e6-19c4-4f89-8604-70492a464805",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
