--- a/ipynb/install.ipynb
+++ b/ipynb/install.ipynb
@@ -57,11 +57,11 @@
       "Building wheels for collected packages: desc-wfmon\n",
       "  Building wheel for desc-wfmon (PEP 517): started\n",
       "  Building wheel for desc-wfmon (PEP 517): finished with status 'done'\n",
-      "  Created wheel for desc-wfmon: filename=desc_wfmon-0.0.15.dev2-py3-none-any.whl size=30371 sha256=8b6ca0274f11982dc767585222cc7e822ac56c60b145f71d230c5dde61302871\n",
+      "  Created wheel for desc-wfmon: filename=desc_wfmon-0.0.15-py3-none-any.whl size=30425 sha256=40d2eda0efc0fe67d6fe3944b58abb524115d959e9d031882ab24fe1d9b8d800\n",
       "  Stored in directory: /global/u2/d/dladams/.cache/pip/wheels/8c/c4/a7/e0f7d35d0abda943febbfb967d473d73927ae1840007e59d62\n",
       "Successfully built desc-wfmon\n",
       "Installing collected packages: desc-wfmon\n",
-      "Successfully installed desc-wfmon-0.0.15.dev2\n",
+      "Successfully installed desc-wfmon-0.0.15\n",
       "bootstrap: Package desc-wfmon is installed at ./install/noconda\n",
       "Done\n"
      ]
@@ -106,9 +106,9 @@
       "[GCC 7.5.0]\n",
       "Python search path starts with ./install/noconda\n",
       "/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb\n",
-      "<module 'desc.local' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/local/__init__.py'> version is 0.0.15.dev2\n",
-      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.15.dev2\n",
-      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.15.dev2\n"
+      "<module 'desc.local' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/local/__init__.py'> version is 0.0.15\n",
+      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.15\n",
+      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.15\n"
      ]
     }
    ],
