--- a/ipynb/setup.ipynb
+++ b/ipynb/setup.ipynb
@@ -7,17 +7,12 @@
     "tags": []
    },
    "source": [
-    "# Bootstrap install of desc-wfmon\n",
+    "# setup.py: Setup a local installation of desc-wfmon\n",
     "\n",
     "David Adams  \n",
     "March 2022\n",
     "\n",
-    "This is a simple notebook to demonstrate use of desc.local to do a bootstrap installation of *desc-wfmon* in ./install. The bootstrap first removes the installation directory if already existing.  \n",
-    "\n",
-    "Run this note book to build or update in the local directory and then use the following in any other notebook to put this version of desc-wfmon at the fron of your python path:\n",
-    "<pre>\n",
-    "%run install/setup.py\n",
-    "</pre>"
+    "Set up a local (./install) installation of desc-wfmon if it exist or installit if not."
    ]
   },
   {
@@ -68,21 +63,16 @@
     }
    ],
    "source": [
-    "print('Installing desc-wfmon')\n",
+    "print('Setting up desc-wfmon')\n",
     "\n",
     "import sys\n",
     "import os\n",
     "\n",
-    "# Set directory where desc-wfmon (https://github.com/LSSTDESC/desc-wfmon.git) is checked out.\n",
-    "devdir = f\"{os.getenv('HOME')}/desc/dev\"\n",
-    "\n",
-    "pkgdir = f\"{devdir}/desc-wfmon\"\n",
-    "bsfil = f\"{pkgdir}/bootstrap.py\"\n",
-    "if not os.path.exists(bsfil):\n",
-    "    print(f\"ERROR: Unable to find desc-wfmon bootstrap: {bsfil}\")\n",
-    "\n",
-    "# Run boostrap that build and install in ./install.\n",
-    "%run $bsfil"
+    "supfil = 'install/setup.py'\n",
+    "if os.path.exists(supfil):\n",
+    "    %run $supfil\n",
+    "else:\n",
+    "    %run $srcdir/desc-wfmon/ipynb/install.ipynb"
    ]
   },
   {
@@ -120,7 +110,7 @@
     "!pwd\n",
     "import desc.wfmon\n",
     "import desc.sysmon\n",
-    "for pkg in [desc.local, desc.wfmon, desc.sysmon]:\n",
+    "for pkg in [desc.wfmon, desc.sysmon]:\n",
     "    print(f\"{pkg} version is {pkg.__version__}\")"
    ]
   }
