Update nbs monexp, montab to use run dir.

--- a/ipynb/montab.ipynb
+++ b/ipynb/montab.ipynb
@@ -9,7 +9,9 @@
    "source": [
     "# desc-wfmon/montab.ipynb: Monitor table viewing example\n",
     "\n",
-    "We use the classes in desc-wfmon to examine one of the monitoring tables from DESC gen3 parsl jobs.  \n",
+    "We use the classes in desc-wfmon to examine one of the monitoring tables from DESC gen3 parsl jobs.\n",
+    "\n",
+    "Copy this file to the run directory or modiufy variable *dir* below.\n",
     "\n",
     "First setup to use the local install area and then import the the system (sysmon) and process (wfmon) explorers. \n",
     "\n",
@@ -26,21 +28,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/global/u2/d/dladams/desc/rundirs/test20\n",
       "Python version is 3.9.7 (default, Sep 16 2021, 13:09:58) \n",
       "[GCC 7.5.0]\n",
-      "Python search path starts with ./install/noconda:/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb:\n",
-      "/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb\n",
-      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.15\n",
-      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.15\n"
+      "Python search path starts with ./install/noconda:/global/u2/d/dladams/desc/rundirs/test20:\n",
+      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/rundirs/test20/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.15\n",
+      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/rundirs/test20/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.15\n"
      ]
     }
    ],
    "source": [
+    "!pwd\n",
     "%run install/setup.py\n",
     "import sys\n",
     "print(f\"Python version is {sys.version}\")\n",
     "print(f\"Python search path starts with {sys.path[0]}:{sys.path[1]}:{sys.path[2]}\")\n",
-    "!pwd\n",
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as pltcol\n",
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1c11c974-6953-4089-b61f-58fd3992a97f",
    "metadata": {},
    "outputs": [],
@@ -72,17 +74,8 @@
     "bunit_sys = bunit/gb\n",
     "sbunit = 'GB'\n",
     "\n",
-    "snjob = '60'\n",
-    "suffix = ''\n",
-    "#suffix = '-noshuffle'\n",
-    "dir = f\"/global/homes/d/dladams/desc/parsltest/scan01/runinfo-{snjob}-300-{snjob}-1-1.8{suffix}/\"\n",
-    "dir = f\"/global/homes/d/dladams/desc/parsltest/runinfo-200-300-{snjob}-1-1.8{suffix}/\"\n",
-    "#dir = '/global/homes/d/dladams/desc/parsltest/runinfo/'\n",
-    "dir = f\"/global/homes/d/dladams/desc/test8/\"\n",
-    "dirProc = dir\n",
-    "if 1:\n",
-    "    dir = f\"/global/homes/d/dladams/desc/test10/\"\n",
-    "    dirProc = dir + 'runinfo/'\n",
+    "dir = f\"./\"\n",
+    "dirProc = dir + 'runinfo/'\n",
     "line = '-----------------------------------------------------------'"
    ]
   },
@@ -102,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4e7f69f9-94f0-4326-8ba8-52a62fdcc64b",
    "metadata": {},
    "outputs": [
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e145d796-d1a6-47ee-aee9-a839192abae1",
    "metadata": {},
    "outputs": [
@@ -173,7 +166,7 @@
      "output_type": "stream",
      "text": [
       "-----------------------------------------------------------\n",
-      "DB /global/homes/d/dladams/desc/test10/runinfo/monitoring.db has 9 tables\n",
+      "DB ./runinfo/monitoring.db has 9 tables\n",
       "*******************************************************\n",
       "Table workflow has 1 rows and 9 columns\n",
       "Column names:\n",
@@ -235,7 +228,7 @@
       "    object   timestamp\n",
       "    object   last_heartbeat\n",
       "*******************************************************\n",
-      "Table block has 675 rows and 6 columns\n",
+      "Table block has 682 rows and 6 columns\n",
       "Column names:\n",
       "     int64   run_idx\n",
       "    object   executor_label\n",
@@ -244,7 +237,7 @@
       "   float64   timestamp\n",
       "    object   status\n",
       "*******************************************************\n",
-      "Table status has 10766 rows and 6 columns\n",
+      "Table status has 10795 rows and 6 columns\n",
       "Column names:\n",
       "     int64   task_id\n",
       "     int64   task_idx\n",
@@ -253,7 +246,7 @@
       "     int64   run_idx\n",
       "     int64   try_id\n",
       "*******************************************************\n",
-      "Table resource has 133129 rows and 16 columns\n",
+      "Table resource has 45107 rows and 16 columns\n",
       "Column names:\n",
       "     int64   try_id\n",
       "     int64   task_id\n",
@@ -272,7 +265,7 @@
       "   float64   psutil_process_disk_write\n",
       "    object   psutil_process_status\n",
       "*******************************************************\n",
-      "Table procsum has 3317 rows and 12 columns\n",
+      "Table procsum has 1013 rows and 12 columns\n",
       "Column names:\n",
       "   float64   timestamp\n",
       "     int64   nval\n",
@@ -287,7 +280,7 @@
       "   float64   procsum_disk_read\n",
       "   float64   procsum_disk_write\n",
       "*******************************************************\n",
-      "Table procsumDelta has 3317 rows and 12 columns\n",
+      "Table procsumDelta has 1013 rows and 12 columns\n",
       "Column names:\n",
       "   float64   timestamp\n",
       "     int64   nval\n",
@@ -322,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b47832bf-27b3-4305-8752-e83285e1bcc5",
    "metadata": {},
    "outputs": [
@@ -344,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "996e5eae-d2da-43d7-8079-046f995a66da",
    "metadata": {},
    "outputs": [
@@ -352,27 +345,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        timestamp  psutil_process_time_user\n",
-      "126231        NaN                       NaN\n",
-      "126324   0.988813                      0.60\n",
-      "126459   0.942915                      0.51\n",
-      "126461   1.012815                      0.55\n",
-      "126353   0.976656                      0.68\n",
-      "126553   0.978149                      0.74\n",
-      "126487   1.013831                      1.01\n",
-      "126647   1.042062                      0.48\n",
-      "126632   0.970848                      0.55\n",
-      "126618   1.028572                      0.66\n",
-      "126731   0.987062                      0.78\n",
-      "126781   1.008338                      0.61\n",
-      "126803   1.022589                      0.90\n",
-      "126921   1.006947                      0.81\n",
-      "126840   0.990794                      0.34\n",
-      "127079   1.338268                      0.60\n",
-      "127003   0.980305                      0.29\n",
-      "127010   1.349784                      0.64\n",
-      "126941   1.329965                      0.84\n",
-      "126953   1.051761                      0.12\n"
+      "       timestamp  psutil_process_time_user\n",
+      "39365        NaN                       NaN\n",
+      "39391   3.000142                      0.30\n",
+      "39444   2.918900                      2.65\n",
+      "39483   3.056829                      2.81\n",
+      "39534   2.956895                      2.47\n",
+      "39586   3.057568                      2.03\n",
+      "39611   2.972936                      2.85\n",
+      "39656   2.964260                      2.84\n",
+      "39704   3.061438                      2.87\n",
+      "39752   3.021259                      3.21\n",
+      "39819   2.976374                      3.11\n",
+      "39865   2.997954                      3.14\n",
+      "39883   3.017583                      3.20\n",
+      "39961   3.000769                      3.18\n",
+      "40006   2.938535                      3.03\n",
+      "40064   3.289375                      3.63\n",
+      "40119   2.772324                      2.95\n",
+      "40173   2.995155                      2.91\n",
+      "40209   3.001769                      3.00\n",
+      "40255   3.001591                      2.89\n",
+      "40300   2.937762                      3.03\n",
+      "40358   3.011070                      3.14\n",
+      "40405   3.055225                      3.24\n",
+      "40446   2.998613                      3.17\n",
+      "40490   2.980296                      3.13\n",
+      "40563   3.013717                      3.18\n",
+      "40616   2.994219                      3.16\n",
+      "40663   2.998613                      3.14\n",
+      "40718   2.998268                      3.15\n",
+      "40748   2.996932                      3.08\n",
+      "40791   3.000011                      2.87\n",
+      "40839   3.009124                      3.14\n",
+      "40889   2.994838                      3.15\n",
+      "40950   2.997923                      3.14\n",
+      "40990   2.948878                      3.03\n",
+      "41041   3.188419                      3.53\n",
+      "41076   2.857641                      3.00\n",
+      "41111   2.999672                      2.94\n",
+      "41167   2.935394                      2.63\n",
+      "41189   2.911771                      0.14\n"
      ]
     }
    ],
@@ -385,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "272bb989-665f-4aa5-8f9f-3ed064c7b4bc",
    "metadata": {},
    "outputs": [
@@ -393,24 +406,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.6700351238250732\n",
-      "0.1 0.6502158641815186\n",
-      "0.2 0.6502158641815186\n",
-      "0.30000000000000004 0.6502158641815186\n",
-      "0.4 0.9803049564361572\n",
-      "0.5 0.6617319583892822\n",
-      "0.6 0.6617319583892822\n",
-      "0.7 0.9482388496398926\n",
-      "0.7999999999999999 0.9861688613891602\n",
-      "0.8999999999999999 0.6700351238250732\n",
-      "0.9999999999999999 0.6700351238250732\n",
-      "1.0999999999999999 0.6502158641815186\n",
-      "1.2 0.6502158641815186\n",
-      "1.3 0.6502158641815186\n",
-      "1.4000000000000001 0.9803049564361572\n",
-      "1.5000000000000002 0.6617319583892822\n",
-      "WARNING: Unable to find offset for run task 255. Using 0.0.\n",
-      "toff = 0.0, maxdif = 0.6617319583892822\n"
+      "0 0.28937506675720215\n",
+      "toff = 0, maxdif = 0.28937506675720215\n"
      ]
     }
    ],
@@ -678,8 +675,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "072bd985-af01-4a83-8871-7830f8ede60d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum number of tries is 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Maximum number of tries is {dbr.table('try')['try_id'].max()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95223604-5e7b-4296-8931-6bc9063f566f",
    "metadata": {},
    "outputs": [],
    "source": []
