--- a/ipynb/setup.ipynb
+++ b/ipynb/setup.ipynb
@@ -25,54 +25,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Installing desc-wfmon\n",
-      "bootstrap: Installing descr-wfmon.\n",
-      "Installing /global/homes/d/dladams/desc/dev/desc-wfmon at ./install/noconda\n",
-      "Processing /global/homes/d/dladams/desc/dev/desc-wfmon\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  DEPRECATION: A future pip version will change local packages to be built in-place without first copying to a temporary directory. We recommend you use --use-feature=in-tree-build to test your packages with this new behavior before it becomes the default.\n",
-      "   pip 21.3 will remove support for this functionality. You can find discussion regarding this at https://github.com/pypa/pip/issues/7555.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "    Preparing wheel metadata: started\n",
-      "    Preparing wheel metadata: finished with status 'done'\n",
-      "Building wheels for collected packages: desc-wfmon\n",
-      "  Building wheel for desc-wfmon (PEP 517): started\n",
-      "  Building wheel for desc-wfmon (PEP 517): finished with status 'done'\n",
-      "  Created wheel for desc-wfmon: filename=desc_wfmon-0.0.15-py3-none-any.whl size=30425 sha256=40d2eda0efc0fe67d6fe3944b58abb524115d959e9d031882ab24fe1d9b8d800\n",
-      "  Stored in directory: /global/u2/d/dladams/.cache/pip/wheels/8c/c4/a7/e0f7d35d0abda943febbfb967d473d73927ae1840007e59d62\n",
-      "Successfully built desc-wfmon\n",
-      "Installing collected packages: desc-wfmon\n",
-      "Successfully installed desc-wfmon-0.0.15\n",
-      "bootstrap: Package desc-wfmon is installed at ./install/noconda\n",
-      "Done\n"
+      "cori13:/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb: Wed Mar 23 13:58:11 PDT 2022\n",
+      "Setting up desc-wfmon\n"
      ]
     }
    ],
    "source": [
+    "!echo $(hostname):$(pwd): $(date)\n",
     "print('Setting up desc-wfmon')\n",
     "\n",
     "import sys\n",
     "import os\n",
     "\n",
+    "pkgdir = f\"{os.getenv('HOME')}/desc/dev/desc-wfmon\"\n",
     "supfil = 'install/setup.py'\n",
     "if os.path.exists(supfil):\n",
     "    %run $supfil\n",
     "else:\n",
-    "    %run $srcdir/desc-wfmon/ipynb/install.ipynb"
+    "    print('Installing up desc-wfmon')\n",
+    "    %run $pkgdir/bootstrap.py"
    ]
   },
   {
@@ -97,9 +68,10 @@
       "[GCC 7.5.0]\n",
       "Python search path starts with ./install/noconda\n",
       "/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb\n",
-      "<module 'desc.local' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/local/__init__.py'> version is 0.0.15\n",
-      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.15\n",
-      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.15\n"
+      "TestMonDbReader:ctor: Done.\n",
+      "<module 'desc.wfmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/wfmon/__init__.py'> version is 0.0.18\n",
+      "<module 'desc.sysmon' from '/global/u2/d/dladams/desc/dev/desc-wfmon/ipynb/./install/noconda/desc/sysmon/__init__.py'> version is 0.0.18\n",
+      "cori13: Wed Mar 23 13:58:12 PDT 2022\n"
      ]
     }
    ],
@@ -111,8 +83,17 @@
     "import desc.wfmon\n",
     "import desc.sysmon\n",
     "for pkg in [desc.wfmon, desc.sysmon]:\n",
-    "    print(f\"{pkg} version is {pkg.__version__}\")"
+    "    print(f\"{pkg} version is {pkg.__version__}\")\n",
+    "!echo $(hostname): $(date)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83e1767c-d280-4bb1-8f9d-ab81855e94f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
