Add per-CPY freq monitor. 0.4.0.

--- a/ipynb/sysmon.ipynb
+++ b/ipynb/sysmon.ipynb
@@ -48,11 +48,11 @@
       "Building wheels for collected packages: desc-wfmon\n",
       "  Building wheel for desc-wfmon (PEP 517): started\n",
       "  Building wheel for desc-wfmon (PEP 517): finished with status 'done'\n",
-      "  Created wheel for desc-wfmon: filename=desc_wfmon-0.3.0.dev1-py3-none-any.whl size=34325 sha256=3193a72d5e7cfffe54391ec6640d6de6b3b351e29b41f3dc7d6ed8c93a9344e8\n",
+      "  Created wheel for desc-wfmon: filename=desc_wfmon-0.4.0.dev1-py3-none-any.whl size=34523 sha256=dae761513a6b896f9f77ffca95127e6a6c0dbb803a5dc5074b19da80f2f7d0ef\n",
       "  Stored in directory: /global/u2/d/dladams/.cache/pip/wheels/8c/c4/a7/e0f7d35d0abda943febbfb967d473d73927ae1840007e59d62\n",
       "Successfully built desc-wfmon\n",
       "Installing collected packages: desc-wfmon\n",
-      "Successfully installed desc-wfmon-0.3.0.dev1\n",
+      "Successfully installed desc-wfmon-0.4.0.dev1\n",
       "bootstrap: Package desc-wfmon is installed at ./install/noconda\n",
       "Done\n"
      ]
@@ -92,12 +92,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sysmon.reporter: Starting reporter version 0.3.0.dev1\n",
+      "sysmon.reporter: Starting reporter version 0.4.0.dev1\n",
       "sysmon.reporter: Monitor output file is mysysmon.csv\n",
       "sysmon.reporter: Log file is \n",
-      "sysmon.reporter: Starting reporter version 0.3.0.dev1\n",
+      "sysmon.reporter: Starting reporter version 0.4.0.dev1\n",
       "sysmon.reporter: Polling terminated because total time exceeded 10 sec.\n",
-      "sysmon.reporter: Poll count is 7.\n",
+      "sysmon.reporter: Poll count is 5.\n",
       "sysmon.reporter: Done.\n"
      ]
     },
@@ -117,8 +117,9 @@
     "import pandas\n",
     "\n",
     "symfil = 'mysysmon.csv'\n",
+    "frqfil = 'myfrqmon.csv'\n",
     "os.system(f\"rm -f {symfil}\")\n",
-    "desc.sysmon.reporter(fnam=symfil, dt=1, timeout=10)"
+    "desc.sysmon.reporter(fnam=symfil, dt=1, timeout=10, frqfnam=frqfil)"
    ]
   },
   {
@@ -140,31 +141,25 @@
      "output_type": "stream",
      "text": [
       "           time  cpu_count  cpu_percent  cpu_freq  cpu_user  cpu_system  \\\n",
-      "0  1.649279e+09       64.0         18.8  2943.665      0.00        0.00   \n",
-      "1  1.649279e+09       64.0         17.6  2838.850     11.86        9.41   \n",
-      "2  1.649279e+09       64.0         16.1  2706.014     13.41       10.71   \n",
-      "3  1.649279e+09       64.0         17.4  2747.923     13.36        9.80   \n",
-      "4  1.649279e+09       64.0         16.6  2734.076     13.17        9.84   \n",
-      "5  1.649279e+09       64.0         14.0  2860.993     11.23        9.17   \n",
-      "6  1.649279e+09       64.0         14.3  2812.818      7.01        5.88   \n",
+      "0  1.649445e+09       64.0         52.8  2521.190      0.00        0.00   \n",
+      "1  1.649445e+09       64.0         31.5  2595.925     92.39       26.17   \n",
+      "2  1.649445e+09       64.0         66.0  2609.507     72.66       13.09   \n",
+      "3  1.649445e+09       64.0         93.9  2567.105    185.94       37.67   \n",
+      "4  1.649445e+09       64.0         89.0  2567.668    195.71       34.72   \n",
       "\n",
       "   cpu_idle  cpu_iowait  cpu_time  mem_total  mem_available  mem_swapfree  \\\n",
-      "0      0.00        0.00      0.00    503.048        149.856       152.541   \n",
-      "1    104.86        0.01    126.49    503.048        148.178       150.863   \n",
-      "2    121.90        0.00    146.51    503.048        146.179       148.863   \n",
-      "3    122.58        0.04    146.09    503.048        144.557       147.242   \n",
-      "4    122.82        0.00    146.13    503.048        151.284       153.969   \n",
-      "5    125.23        0.01    145.89    503.048        151.289       153.974   \n",
-      "6     79.00        0.00     92.04    503.048        151.295       153.980   \n",
+      "0      0.00        0.00      0.00    503.048        164.059       156.607   \n",
+      "1    121.28        0.01    240.01    503.048        163.375       155.922   \n",
+      "2      4.64        0.00     90.42    503.048        163.232       155.777   \n",
+      "3     26.38        0.00    250.27    503.048        163.396       155.945   \n",
+      "4     19.35        0.00    249.87    503.048        163.097       155.644   \n",
       "\n",
       "   dio_readsize  dio_writesize  nio_readsize  nio_writesize  \n",
-      "0           0.0            0.0         0.000          0.000  \n",
-      "1           0.0            0.0         0.001          0.001  \n",
-      "2           0.0            0.0         0.001          0.001  \n",
-      "3           0.0            0.0         0.001          0.001  \n",
-      "4           0.0            0.0         0.001          0.002  \n",
-      "5           0.0            0.0         0.001          0.001  \n",
-      "6           0.0            0.0         0.001          0.001  \n"
+      "0           0.0          0.000         0.000          0.000  \n",
+      "1           0.0          0.001         0.038          0.002  \n",
+      "2           0.0          0.000         0.000          0.001  \n",
+      "3           0.0          0.005         0.002          0.004  \n",
+      "4           0.0          0.000         0.001          0.003  \n"
      ]
     },
     {
